--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+
+    <link href="//db.onlinewebfonts.com/c/073e41832fbb18ca3c80dfe0b4c73355?family=onlinewebfonts" rel="stylesheet" type="text/css"/>
     <title>React App</title>
   </head>
   <body>
