--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     -->
 
     <!-- <link  rel="preload" href="//db.onlinewebfonts.com/c/073e41832fbb18ca3c80dfe0b4c73355?family=onlinewebfonts" rel="stylesheet" type="text/css"/> -->
-    <title>React App</title>
+    <title>Recipes</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
